--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/discowd-nitro/media-files/main/media/huh.gif">
+    <meta property="og:image" content="https://raw.githubusercontent.com/discowd-nitro/Amongus/main/176806">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
-    <meta property="og:video:url" content="https://raw.githubusercontent.com/discowd-nitro/media-files/main/media/misery.mp4">
+    <meta property="og:video:url" content="https://raw.githubusercontent.com/discowd-nitro/media-files/main/media/ScreenRecording_10-03-2025_15-17-51_1>
     <!-- If you want a seamless transition between your thumbnail size and video size, adjust these values to match your thumbnail resolution. -->
     <!-- However, it will be all wonky if your thumbnail is vertical and your video is horizontal. This works best with similar aspect ratios -->
     <meta property="og:video:height" content="202">
@@ -16,7 +16,7 @@
     <!-- Stole the memes from https://github.com/iwakkrg/iwakkrg.github.io -->
     
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/@notexttospeech" />
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/@Monyisdofna />
   </head>
   <body>
   </body>
